# nz-local-election

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
parse/: __init__.py  __main__.py  load.py  visit.py
public/: index.html
public/data/: CB_07603.json  CB_07604.json  CB_07605.json  CB_07606.json  CB_07607.json  CB_07608.json  CB_07609.json  CB_07610.json  CB_07611.json  CON_0101.json  CON_0102.json  CON_0103.json  CON_0104.json  CON_0105.json  CON_0106.json  CON_0107.json  CON_0301.json  CON_0302.json  CON_0303.json  CON_0304.json  CON_0305.json  CON_0306.json  CON_0401.json  CON_0402.json  CON_0403.json  CON_0404.json  CON_0601.json  CON_0602.json  CON_0603.json  CON_0604.json  CON_0605.json  CON_0701.json  CON_0702.json  CON_0703.json  CON_0704.json  CON_0801.json  CON_0802.json  CON_0803.json  CON_0804.json  CON_0805.json  (+340 more)
src/: App.vue  router.ts
src/assets/: data_lookup.json
src/components/: ElectionArea.vue  ElectionOverview.vue  ElectionRoot.vue
src/data/: load.ts  types.ts
src/views/: Voting.vue
